# xword

./: .gitignore  CONTRIBUTING.md  LICENSE  PHASE1_SUMMARY.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  ROADMAP.md  example_puzzle.py  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PUZZLE_FORMAT.md  SERVER_GUIDE.md  SETUP.md  TUI_GUIDE.md
examples/: animals.md  quick.md  simple.md
tests/: __init__.py
tests/integration/: __init__.py  test_tui.py
tests/unit/: __init__.py  test_puzzle_parser.py
xword/: __init__.py  cli.py
xword/client/: __init__.py  client.py
xword/core/: __init__.py  generator.py  models.py  puzzle.py
xword/formats/: __init__.py  display.py  markdown.py
xword/server/: __init__.py  app.py
xword/tui/: __init__.py  app.py  widgets.py
xword/utils/: wikipedia.py
